--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,6 @@ body {
     min-width: 250px;
 }
 
-/* section {
-    margin: 0.5rem;
-} */
-
 header {
     color: white;
     padding: 0.5rem;
@@ -158,7 +154,7 @@ body p {
 }
 
 
-/* Main */
+/* Main Page */
 .main-grid {
     display: grid;
     grid-template: 1fr / 1fr 0.3fr;
@@ -197,7 +193,7 @@ body p {
     padding: 1rem;
 }
 
-/* Carrousel */
+/* Carousel */
 .premieres {
     grid-area: premieres;
     display: flex;
@@ -206,33 +202,38 @@ body p {
     background-color:#2dbeb3;
     border: 2px solid black ;
     padding: 0.5rem;
+    padding-left: 0.5rem;
     margin:0;
     text-align: center;
     overflow-y: hidden;
 }
 
-.premieres > div {
+.premiere {
     flex: 1 0 auto;
     background-color:#00a6ae ;
     border-radius: 40px;
     border: 2px solid black ;
     margin: 0.5rem 1rem;
     width: 50%;
-    height: 95%;
-    min-width: 150px;
+    /* height: 95%; */
+    /* height: fit-content; */
+    min-width: 100px;
+    max-width: 250px;
 }
 
-.premieres > div > img {
+.premiere-img {
     width: 100%;
     height: 80%;
     border-radius: 40px;
-    object-fit: contain;
+    /* object-fit: contain; */
     margin: 0;
-    padding: 0.5rem 0.5rem 0;
+    padding: 1rem 0.5rem 0;
 }
 
-.premieres > div > h3 {
+.premiere-title {
     margin: 0;
+    padding: 0.2rem 0.5rem;
+    font-size: 3vw;
 }
 
 
@@ -440,7 +441,7 @@ aside h2 {
     text-align: center;
 }
 
-/* Media Queries Home */
+/* Media Queries Main */
 @media screen and (max-width:992px) {  
     .main-grid {
         display: grid;
@@ -510,6 +511,13 @@ aside h2 {
     }
 }
 
+@media screen and (min-width:768px) {
+    .premiere-title {
+        font-size: 2.2vw;
+    }
+
+}
+
 
 /* Footer */
 
@@ -530,11 +538,68 @@ footer nav li a {
     color: white;
 }
 
-/* Sucursales */
+/* About Page */
+.developers-profile {
+    background-color: bisque;
+    padding: 1.4rem 1.4rem 2.8rem;
+    margin: 0 0 2.5rem;
+    text-align: center;
+}
+
+.dev-picture {
+    display: inline-block;
+    border-radius: 50%;
+    border: 2px solid black ;
+    margin: 1rem 0;
+    width: 170px;
+    height: 170px;
+    min-width: 150px;
+    position: relative;
+    overflow: hidden;
+    text-align: start;
+}
+
+.dev-picture img {
+    width: 230px;
+    position:absolute;
+    left: -19%;
+    top: -13%;
+}
+
+.dev-info {
+    background-color: #00a6ae;
+    padding: 0.6rem;
+    border-radius: 40px;
+    border: 2px solid black ;
+    width: 100%;
+}
+
+.dev-info p {
+    color: #1F2227;
+}
+
+.video-academy {
+    margin-top: 1.5rem;
+    margin-bottom: 0;
+    text-align: center;
+    /* width: 90vw; */
+    height: 30vw;
+    min-height: 200px;
+}
+
+.video-academy iframe {
+    width: 80%;
+    height: 80%;
+}
+
 .branches-location, .developers {
     margin: 0;
     padding: 0.5em;
     min-width:min-content;
+}
+
+.section-about h1 {
+    margin:0 0 1rem;
 }
 
 .branch {
@@ -566,6 +631,26 @@ footer nav li a {
         flex-basis: calc(49%);
         margin-bottom: 1em;
     }
+
+    .developers-profile {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-right: 1.8rem;
+    }
+    
+    .dev-picture {
+        justify-content: center;
+        align-items: center;
+        margin: 0 1rem;
+    }
+
+    .dev-picture img {
+        left: -28%;
+    }
+    .dev-info {
+        flex-basis: 50%;
+    }
 }
 
 /*Distribuye en 3 columnas al pasar los 992px para landscape tablets, laptops y desktops*/
@@ -575,7 +660,7 @@ footer nav li a {
     }
 }
 
-/* Reviews */
+/* Reviews Page */
 
 .scroll-title {
     position: sticky;
@@ -691,8 +776,6 @@ footer nav li a {
 }
 
 
-
-
 /* Paso de 1 columna a 2 al superar una resolución de 768px */
 
 @media screen and (min-width:768px) {
@@ -754,24 +837,7 @@ footer nav li a {
 
 
 
-/* Contacto */
-.comments {
-    padding: 1em 1.6em;
-    background-color: #00a6ae;
-    width: 100%;
-}
-
-.comments-fieldset {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0;
-}
-
-.textarea-comments {
-    min-width:100%; 
-}
-
-/*Formulario */
+/*Contact Page*/
 
 body form {
     margin: 0.2em;
@@ -799,5 +865,21 @@ body form {
 
 #firstname, #lastname, #dni, #birthday, #emailAdress {
     min-width: 100%;
+}
+
+.comments {
+    padding: 1em 1.6em;
+    background-color: #00a6ae;
+    width: 100%;
+}
+
+.comments-fieldset {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+}
+
+.textarea-comments {
+    min-width:100%; 
 }
 
