--- a/css/style.css
+++ b/css/style.css
@@ -474,7 +474,7 @@ aside h2 {
 @media screen and (max-width:768px) {
     .main-grid {
         display: grid;
-        grid-template: 1fr 0.2fr / 1fr;
+        grid-template: auto / 1fr;
         grid-gap: 20px;
         grid-template-areas:"section"
                             "aside";
